resultatsMoulinette/01-Tests.txt
-- The CXX compiler identification is GNU 12.2.0
-- The C compiler identification is GNU 12.2.0
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE  
-- Configuring done
-- Generating done
-- Build files have been written to: /home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/build
[ 25%] Building CXX object CMakeFiles/testfa.dir/Automaton.cc.o
[ 50%] Building CXX object CMakeFiles/testfa.dir/testfa.cc.o
In file included from /home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/googletest/googletest/include/gtest/gtest.h:60,
                 from /home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/testfa.cc:2:
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/testfa.cc: In member function ‘virtual void testAddState_stateWithLargeValue_Test::TestBody()’:
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/testfa.cc:250:34: error: ‘INT_MAX’ was not declared in this scope
  250 |   EXPECT_TRUE(automaton.addState(INT_MAX));
      |                                  ^~~~~~~
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/googletest/googletest/include/gtest/internal/gtest-internal.h:1500:34: note: in definition of macro ‘GTEST_TEST_BOOLEAN_’
 1500 |       ::testing::AssertionResult(expression)) \
      |                                  ^~~~~~~~~~
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/googletest/googletest/include/gtest/gtest.h:1985:32: note: in expansion of macro ‘GTEST_EXPECT_TRUE’
 1985 | #define EXPECT_TRUE(condition) GTEST_EXPECT_TRUE(condition)
      |                                ^~~~~~~~~~~~~~~~~
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/testfa.cc:250:3: note: in expansion of macro ‘EXPECT_TRUE’
  250 |   EXPECT_TRUE(automaton.addState(INT_MAX));
      |   ^~~~~~~~~~~
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/testfa.cc:5:1: note: ‘INT_MAX’ is defined in header ‘<climits>’; did you forget to ‘#include <climits>’?
    4 | #include "Automaton.h"
  +++ |+#include <climits>
    5 | 
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/testfa.cc: In member function ‘virtual void testCreateComplete_testWithMaxIntState_Test::TestBody()’:
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/testfa.cc:1294:22: error: ‘INT_MAX’ was not declared in this scope
 1294 |   automaton.addState(INT_MAX);
      |                      ^~~~~~~
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/testfa.cc:1294:22: note: ‘INT_MAX’ is defined in header ‘<climits>’; did you forget to ‘#include <climits>’?
make[2]: *** [CMakeFiles/testfa.dir/build.make:90 : CMakeFiles/testfa.dir/testfa.cc.o] Erreur 1
make[1]: *** [CMakeFiles/Makefile2:83 : CMakeFiles/testfa.dir/all] Erreur 2
make: *** [Makefile:91 : all] Erreur 2
